feat: split Units when different businesses occupied the same address key concurrently
FLOOR::/raw-text-keyed groups (no specific unit number) that show two
different business names open at overlapping times are re-split, first by
raw jibun/road address text, then by business name if that still collides
(가락시장/AK플라자/백현동/롯데백화점 실측 사례). UNIT:: keyed groups (specific
parsed unit number) are left untouched -- real collapse cases never had a
unit number, and overlapping different names there are more likely stale
unreported closures than genuine second physical spots.

Full-suite run surfaced two more fallout spots beyond the two named
regression tests: 같은_pnu에서_도로명주소만_다르면_같은_물건으로_묶는다 had two
overlapping-period businessName records that the new detector correctly
flagged as contended -- adjusted its fixture dates to be non-overlapping so
it keeps testing its original guard (road-address-text variance alone
should not split) without colliding with this feature. csv_동일_pnu 다건
회귀 테스트와 SiteControllerTest의 동일 PNU 카운트(30->31)는 실데이터에 있던
동일한 패턴의 재분리 결과라 기대값을 갱신함(Tenancy 총합 39는 불변).